# WebServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RequestHandler.cpp  RequestHandler.h  Utils.h  main.cpp  vcpkg.json
database/: Redis.cpp  Redis.h
easycode/: iniReader.h
include/: RedisApi.h
